load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "github.com/example/project/cmd",
    visibility = ["//visibility:private"],
)


go_binary(
    name = "crypt-arm",
    embed = [":cmd_lib"],
    goarch = "arm64",
    goos = "darwin",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "crypt-amd",
    embed = [":cmd_lib"],
    goarch = "amd64",
    goos = "darwin",
    visibility = ["//visibility:public"],
)