load("@rules_go//go:def.bzl", "go_binary", "go_cross_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "github.com/grahamgilbert/crypt/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/authmechs",
        "//pkg/checkin",
        "//pkg/pref",
        "//pkg/utils",
    ],
)

go_cross_binary(
    name = "crypt-arm64",
    platform = "@rules_go//go/toolchain:darwin_arm64",
    tags = ["manual"],
    target = "crypt-arm",  # matches go_binary target name
    visibility = ["//visibility:public"],
)

go_cross_binary(
    name = "crypt-amd64",
    platform = "@rules_go//go/toolchain:darwin_amd64",
    tags = ["manual"],
    target = "crypt-amd",  # matches go_binary target name
    visibility = ["//visibility:public"],
)
