load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "checkin",
    srcs = ["escrow.go"],
    importpath = "github.com/grahamgilbert/crypt/pkg/checkin",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/authmechs:postinstall",
        "//pkg/pref",
        "//pkg/utils",
        "@com_github_groob_plist//:plist",
        "@com_github_hashicorp_go_version//:go_default_library",
        "@com_github_pkg_errors//:errors",
        "@com_github_googleapis_enterprise_certificate_proxy_darwin//:go_default_library",  # Added dependency
    ],
)

go_test(
    name = "checkin_test",
    srcs = ["escrow_test.go"],
    embed = [":checkin"],
    deps = [
        "//pkg/utils",
        "@com_github_groob_plist//:plist",
        "@com_github_stretchr_testify//assert",
    ],
)
