load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "postinstall",
    srcs = ["postinstall.go"],
    importpath = "github.com/grahamgilbert/crypt/pkg/postinstall",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/utils",
        "@com_github_groob_plist//:plist",
    ],
)

go_test(
    name = "postinstall_test",
    srcs = ["postinstall_test.go"],
    embed = [":postinstall"],
    deps = ["@com_github_stretchr_testify//assert"],
)
